<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droidcon India</string>
    <string name="tweets">Tweets</string>
    <string name="about">About</string>
    <string name="connection_error_and_try_again">Connection Error!! Check if you have internet connectivity and try again.</string>
    <string name="ok">OK</string>
    <string name="error_title">Error!!!</string>
    <string name="loading">Loading…</string>
    <string name="choose_app">Choose an App</string>
    <string name="share_using">Share Using…</string>
    <string name="message_hint">type your message here…</string>
    <string name="app_title_text">Droidcon India</string>
    <string name="about_message">Droidcon is a two day international conference that\'s all about Android. It brings together luminaries from all aspects of the Android ecosystem - solo app developers, visual and interaction designers, software startups, enterprise software leaders, robotics and arduino wizards, kernel and ROM hackers, OEMs and platform providers, and technology enthusiasts. This years event follows the same format as last year\'s hugely successful conference that involved speakers from Google, Cyanogenmod, Robosoft, Future Platforms, Texas Instruments and other ecosystem players.\n\n Droidcon is a HasGeek conference that\'s run by the Android community for the Android community. Speakers are selected via a community driven voting process and also curated by a Program Committee that consists of experts with several years of experience in the mobile space.\n\nAs a community event, we welcome participation and assistance. If you\'d like to propose a topic to speak about, please visit the HasGeek Funnel: funnel.hasgeek.com/droidcon2012. If you\'d like to be a part of helping out as a volunteer during the event, please contact zainab@hasgeek.com</string>
    <string name="notification_settings_text">Notification (Will check for updates every 10mins)</string>
    <string name="agenda">Agenda</string>
    <string name="updates">Updates</string>
    <string name="venue">Venue</string>
    <string name="share_now">Share Now</string>
    <string name="no_session">Slow down buddy\n\nNo sessions registered for this slot yet.\n\nPlease come back again</string>
    <string name="when_where">When &amp; Where</string>
    <string name="sampletext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="by_user">By user</string>
    <string name="at_symbol"> \@ </string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="i_am_attending">I am attending</string>
    <string name="powered_by">Adapted &amp; Modified by :</string>
    <string name="for_barcamp_bangalore">Orignal code :</string>
</resources>