<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionBar1"
        style="@style/ActionBar" >
    </com.markupartist.android.widget.ActionBar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/b1" 
        android:fillViewport="true"
        android:paddingBottom="60dp"
        >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="Title"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" 
                    />

                <TextView
                    android:id="@+id/presenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:text="@string/by_user"
                    android:textColor="@color/grey_text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" >

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    android:text="@string/sampletext"
                    android:textColor="@color/black"
                    android:textColorHint="#aaa"
                    android:textColorLink="#eee" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:text="@string/when_where"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:orientation="horizontal"
                   >

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="time"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at_symbol"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="location"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/i_am_attending"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>